Atualizaçaõ dos NPCs para o lvl 8

--- a/jade_regent/npcs/koya.html
+++ b/jade_regent/npcs/koya.html
@@ -5,7 +5,7 @@
 <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 <link rel="icon" href="http://www.aedram.com/public/images/favicon.ico?v=1" type="image/x-icon">
 <link rel="shortcut icon" href="http://www.aedram.com/public/images/favicon.ico?v=1" type="image/x-icon">
-<title>Pathfinder: Jade Regent - Koya Mvashti</title>
+<title>Pathfinder: Jade Regent - Spivey</title>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 <script src="http://www.aedram.com/public/scripts/jquery.js"></script>
