--- a/jade_regent/npcs/sandru.html
+++ b/jade_regent/npcs/sandru.html
@@ -36,7 +36,7 @@
 	<div id="stats">
 		<header>
 
-			<h1>Sandru Vhiski<span id="cr">Level 7</span></h1>
+			<h1>Sandru Vhiski<span id="cr">Level 8</span></h1>
 			<h2>Sandru Vhiski nunca escolheu o caminho mais fácil na vida - principalmente porque o caminho mais fácil teria sido seguir seu irmão no mundo do crime entre os Sczarni, um caminho que Sandru orgulha-se de nunca der colocado os pés..</h2>
 
 		</header>
@@ -47,9 +47,9 @@
 			</div>
 			<div class="stats-area">
 				<p>
-					Male human <a href="http://www.d20pfsrd.com/classes/hybrid-classes/swashbuckler" target="_blank">swashbuckler</a> 7<br />
+					Male human <a href="http://www.d20pfsrd.com/classes/hybrid-classes/swashbuckler" target="_blank">swashbuckler</a> 8<br />
 					NG Medium humanoid (human)<br /><br />
-					<strong>Init</strong> +8; <strong>Senses</strong> Perception +10<br />
+					<strong>Init</strong> +8; <strong>Senses</strong> Perception +11<br />
 				</p>
 
 				<h2>DEFENSE</h2>
@@ -57,7 +57,7 @@
 				<p><strong>AC</strong> 23, touch 16, flat-footed 15 (+3 armor, +6 Dex, +2 dodge, +2 shield)<br />
 				<strong>hp</strong> 58 (7d10)<br />
 
-				<strong>Fort</strong> +3, <strong>Ref</strong> +12, <strong>Will</strong> +</br>
+				<strong>Fort</strong> +5, <strong>Ref</strong> +13, <strong>Will</strong> +5</br>
 				<p>
 				<strong>Defensive Abilities</strong>
 						<span class="tooltip">charmed life (+3, 4/day)
@@ -71,8 +71,8 @@
 				<p>
 				<p>
 				<strong>Speed</strong> 30 ft.
-				<p>	<strong>Melee</strong> <em>+1 scimitar</em> +16 (1d6+10/15-20) <br />
-				<strong>Ranged</strong> mwk shortbow +14 (1d6/x3)</p>
+				<p>	<strong>Melee</strong> <em>+1 scimitar</em> +17 (1d6+10/15-20) <br />
+				<strong>Ranged</strong> mwk shortbow +15 (1d6/x3)</p>
 
 				<p><strong>Special Attacks</strong> deeds (
 					<span class="tooltip">derring-do
@@ -131,7 +131,7 @@
 							<em>Torso or Wings</em>: The target is staggered for 1 round.</br>
 						</span>
 					</span>), 
-					<span class="tooltip">penache (6)
+					<span class="tooltip">penache (7)
 						<span class="tooltiptext">
 							A swashbuckler spends panache to accomplish deeds (see below), and regains panache in the following ways.</br>
 						</br>
@@ -144,15 +144,15 @@
 				<h2>STATISTICS</h2>
 				<p>
 				<p><strong>Str</strong> 10,
-				<strong>Dex</strong> 22,
+				<strong>Dex</strong> 23,
 				<strong>Con</strong> 10,
 				<strong>Int</strong> 14,
 				<strong>Wis</strong> 10,
 				<strong>Cha</strong> 16</br>
 
 				<strong>Base Atk</strong> +7;
-				<strong>CMB</strong> +7;
-				<strong>CMD</strong> 25</p>
+				<strong>CMB</strong> +8;
+				<strong>CMD</strong> 26</p>
 
 				<p><strong>Feats</strong> 
 					<span class="tooltip">Combat Reflexes
@@ -163,6 +163,11 @@
 					<span class="tooltip">Extra Panache
 						<span class="tooltiptext">
 							You gain two more panache points at the start of each day, and your maximum panache increases by two.
+						</span>
+					</span>, 
+					<span class="tooltip">Great Fortitude
+						<span class="tooltiptext">
+							You get a +2 bonus on all Fortitude saving throws.
 						</span>
 					</span>, 
 					<span class="tooltip">Improved Critical (Scimitar)
@@ -198,15 +203,15 @@
 					
 				</p>
 				<strong>Skills</strong>
-					<span>Acrobatics +16, </span>
+					<span>Acrobatics +17, </span>
 					<span>Appraise +4, </span>
-					<span>Bluff +10, </span>
+					<span>Bluff +11, </span>
 					<span>Climb +4, </span>
 					<span>Craft (carpentry) +6, </span>
-					<span>Diplomacy +13, </span>
-					<span>Disable Device +19, </span>
+					<span>Diplomacy +14, </span>
+					<span>Disable Device +20, </span>
 					<!--span>Disguise +1, </span-->
-					<span>Escape Artist +13, </span>
+					<span>Escape Artist +14, </span>
 					<!--span>Fly +1, </span-->
 					<span>Handle Animal +4, </span>
 					<!--span>Heal +1, </span-->
@@ -222,14 +227,14 @@
 					<!--span>Knowledge (planes) +1, </span-->
 					<!--span>Knowledge (religion) +1, </span-->
 					<span>Linguistics +5, </span>
-					<span>Perception +10, </span>
+					<span>Perception +11, </span>
 					<!--span>Perform +1, </span-->
-					<span>Profession (merchant) +10, </span>
+					<span>Profession (merchant) +11, </span>
 					<span>Ride +10, </span>
-					<span>Sense Motive +7, </span>	
-					<!--span>Sleight of Hand +1, </span-->	
+					<span>Sense Motive +6, </span>	
+					<span>Sleight of Hand +10, </span>	
 					<!--span>Spellcraft +1, </span-->
-					<span>Stealth +13, </span>
+					<span>Stealth +14, </span>
 					<!--span>Survival +14, </span-->	
 					<span>Swim +4 </span>
 					<!--span>Use Magic Device +1, </span-->
@@ -326,6 +331,19 @@
 		<p>
 			<strong>Spectro:</strong> o xamã é ao mesmo tempo um amigo e um rival para Sandru. Talvez um dos poucos membros da caravana que o ajudam diretamente a administrar as questões do dia-a-dia, Spectro tem uma visível queda por Ameiko. Sandru finge competir pelo coração de Ameiko com Spectro para desespero do xamã. 
 		</p>
+		<p>
+			<strong>Yori:</strong> na última vez em que se aventuraram juntos, Sandru chamou Yori de "Yuri", o que enfureceu o jovem mago que acabou atacando Sandru com suas magias. Yori pediu desculpas e Sandru o perdoou, mas as coisas entre eles tem estado estranhas desde então.
+		</p>
+
+
+		<h1>Estratégia de Combate</h1>
+		<p>
+		<p>
+			Sandru consegue causar muito dano com sua cimitarra e consegue se defender muito bem de inimigos que atacam corpo-a-corpo. Além de ter uma classe de armadura relativamente alta, ele pode usar sua habilidade de classe <em>opportune parry and riposte</em> para bloquear ataques corpo-a-corpo inimigos. Para isso basta ele gastar um panache e fazer uma jogada de ataque. Se a jogada de ataque for maior do que a jogada de ataque inimiga, Sandru conseguiu dar "parry" ou bloquear o golpe.
+		</p> 
+		<p>
+			Sandru também tem três habilidades de defesa diferentes que ele pode usar com uma ação imediatava. <em>Charmed life</em> permite somar o modificar de carisma em uma jogada de resistência (saving throw). <em>Dodging panache</em> permite a Sandru reagir a um ataca corpo-a-corpo, ganhando um bônus na CA igual ao seu modificador de carisma e se reposicionar 1 quadrado. Alternativamente, ao conseguir fazer um parry de um ataque, Sandru pode revidar atacando seu atacante com <em>opportune parry and riposte</em>. Entretando, Sandru só pode fazer uma das três habilidades por turno, e deve portanto escolher com sabedoria qual deles usar em cada situação.
+		</p> 
 	</div>
 </div>
 
